--- a/Maternity/Maternity.csproj
+++ b/Maternity/Maternity.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
@@ -13,13 +13,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.35" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.35">
-			<PrivateAssets>all</PrivateAssets>
-			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-		</PackageReference>
 		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.22.1" />
-		<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.18" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.9.0" />
 	</ItemGroup>
 
@@ -27,10 +21,6 @@
 		<ProjectReference Include="..\BL\BL.csproj" />
 		<ProjectReference Include="..\DB\DB.csproj" />
 		<ProjectReference Include="..\DTO\DTO.csproj" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<Folder Include="NewFolder\" />
 	</ItemGroup>
 
 </Project>
